Page MenuHome GnuPG

Kleopatra: Does not change OpenPGP keyserver configured in gpg.conf
Closed, ResolvedPublic

Description

The OpenPGP keyserver can be configured in gpg.conf (legacy) and dirmngr.conf (modern; since gpg 2.1.9). gpg/dirmngr prefers the legacy setting.

Kleopatra

  • reads the legacy setting if the modern setting is not set
  • writes the modern setting if it is available

This means, that, if the legacy setting is set, then it's not possible to change the setting via Kleopatra, because Kleopatra writes the modern setting which is ignored by gpg/dirmngr because gpg/dirmngr prefer the legacy setting.

With GnuPG 2.3 the problem is worse, because the legacy setting is no longer available via gpgconf, but it's still used by gpg/dirmngr.

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker added a project: Restricted Project.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Fixed for gpg < 2.3. To make the fix also work for gpg 2.3, T5462: gpgconf: Make gpg/keyserver option available again needs to be fixed.